@@ -1231,6 +1231,7 @@ GEN     RgXY_swap(GEN x, long n, long w);
 GEN     RgXY_swapspec(GEN x, long n, long w, long nx);
 GEN     RgXn_eval(GEN Q, GEN x, long n);
 GEN     RgXn_exp(GEN f, long e);
+GEN     RgXn_expint(GEN f, long e);
 GEN     RgXn_inv(GEN f, long e);
 GEN     RgXn_inv_i(GEN f, long e);
 GEN     RgXn_mul(GEN f, GEN g, long n);
