@@ -157,6 +157,7 @@ BA  54- [libpari] FlxX_Laplace, FlxX_invLaplace, FlxqX_Newton, FlxqX_fromNewton
         vector-valued L-function
     57- [libpari] gc_const
 AP  58- [libpari] QM_ImZ, QM_ImZ_all, QM_ImQ, QM_ImQ_all
+BA  59- [libpari] RgXn_expint
 
   Removed
      1- obsolete function rootsof1_kannan: use nfrootsof1
